--- a/service dashboard.html
+++ b/service dashboard.html
@@ -148,43 +148,35 @@
       <div class="provider-list">
         <div class="provider-card">
           <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="John" class="profile-image">
-          <h4>John Doe</h4>
-          <div class="info-item">Contact: +91-9876543210</div>
+          <h4>balwinder singh</h4>
+          <div class="info-item">Contact: 7837352755</div>
           <div class="info-item">Service Type: Electrician</div>
           <div class="info-item">Rating: ⭐ 4.5</div>
           <div class="info-item">Pricing: ₹300/hour</div>
         </div>
         <div class="provider-card">
           <img src="https://randomuser.me/api/portraits/women/2.jpg" alt="Alice" class="profile-image">
-          <h4>Alice Smith</h4>
-          <div class="info-item">Contact: +91-9988776655</div>
+          <h4>prem shanker</h4>
+          <div class="info-item">Contact:9872585939</div>
           <div class="info-item">Service Type: Plumber</div>
           <div class="info-item">Rating: ⭐ 4.7</div>
           <div class="info-item">Pricing: ₹350/hour</div>
         </div>
         <div class="provider-card">
           <img src="https://randomuser.me/api/portraits/men/3.jpg" alt="Bob" class="profile-image">
-          <h4>Bob Johnson</h4>
-          <div class="info-item">Contact: +91-9123456789</div>
+          <h4>sameer</h4>
+          <div class="info-item">Contact:8699543574</div>
           <div class="info-item">Service Type: Carpenter</div>
           <div class="info-item">Rating: ⭐ 4.6</div>
           <div class="info-item">Pricing: ₹400/hour</div>
         </div>
         <div class="provider-card">
           <img src="https://randomuser.me/api/portraits/men/4.jpg" alt="Sam" class="profile-image">
-          <h4>Sam Wilson</h4>
-          <div class="info-item">Contact: +91-9999999999</div>
+          <h4>jagtaar singh</h4>
+          <div class="info-item">Contact:9975885741</div>
           <div class="info-item">Service Type: Painter</div>
           <div class="info-item">Rating: ⭐ 4.4</div>
           <div class="info-item">Pricing: ₹280/hour</div>
-        </div>
-        <div class="provider-card">
-          <img src="https://randomuser.me/api/portraits/women/5.jpg" alt="Emma" class="profile-image">
-          <h4>Emma Watson</h4>
-          <div class="info-item">Contact: +91-1234567890</div>
-          <div class="info-item">Service Type: Cleaner</div>
-          <div class="info-item">Rating: ⭐ 4.8</div>
-          <div class="info-item">Pricing: ₹250/hour</div>
         </div>
       </div>
     </div>
